[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts1/Bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/space/Effects/fire15.png" type="Texture" id=2]
[ext_resource path="res://scenes/Bullet/Bullet_Area2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61, 91.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46, 141 )

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.49998, 10 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="DieTimer" type="Timer" parent="."]

[node name="DebufTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 11
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5, 5 )
rotation = -1.5708
shape = SubResource( 2 )

[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="timeout" from="DebufTimer" to="." method="_on_DebufTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
